<resources>
    <string name="app_name">Quran with Urdu Translation</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="no_favorite_videos">You can click heart icon on video to add it to your favorites :)</string>
    <string name="general">General</string>
    <string name="video_notifications">Notifications</string>
    <string name="misc">Miscellaneous</string>
    <string name="open_source_summary">Licences of libraries used in this app</string>
    <string name="open_source_title">Open Source Licences</string>
    <string name="about_title">About</string>
    <string name="code_title">Code at Github</string>
    <string name="code_summary">Navigate to Github repository of this app</string>
    <string name="summary_notification">Receive notification for new video</string>
    <string name="about_summary">Videos are loaded from Nafees Malik Quran with
        Urdu and English Youtube channel. The app is developed with 💖 by bullhead</string>
    <string name="default_notification_channel_id">Video Notifications</string>
    <string name="share_app">Share App</string>
    <string name="share_summary">Share the Google Play link of application with your friends</string>
    <string name="share_text">%s https://play.google.com/store/apps/details?id=%s</string>
</resources>
