<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">

        <SwitchPreferenceCompat
            android:summary="Receive notification for new video"
            app:key="notification"
            app:title="@string/video_notifications" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <Preference
            app:key="licences"
            app:summary="@string/open_source_summary"
            app:title="@string/open_source_title" />

        <Preference
            app:key="about"
            app:summary="@string/about_summary"
            app:title="@string/about_title" />

    </PreferenceCategory>

</PreferenceScreen>